fixed total pricing alignment in cart

--- a/src/components/Cart.module.css
+++ b/src/components/Cart.module.css
@@ -61,6 +61,7 @@
     text-align: right;
     margin-top: 20px;
     font-weight: 500;
+    padding-right: 2rem;
   }
   
   .emptyMessage{
